<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/cyan">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:textSize="100sp"
        android:fontFamily="@font/catchy_melody"
        android:textColor="@color/green"
        android:shadowColor="@color/yellow"
        android:shadowDx="16"
        android:shadowDy="16"
        android:shadowRadius="1"
        />

    <Button android:id="@+id/btn_main_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/start"
        android:backgroundTint="@color/orange"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/super_boys"/>

    <Button android:id="@+id/btn_main_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/leaderboard"
        android:backgroundTint="@color/orange"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/super_boys"/>

    <Button android:id="@+id/btn_main_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/exit"
        android:backgroundTint="@color/orange"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/super_boys"/>

</LinearLayout>