<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_leader"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LeaderboardActivity"
    android:background="@color/cyan"
    android:paddingHorizontal="20dp">
        <TextView android:id="@+id/text_leader_leaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:fontFamily="@font/catchy_melody"
            android:textSize="50sp"
            android:textColor="@color/green"
            android:shadowColor="@color/yellow"
            android:shadowRadius="1"
            android:shadowDx="8"
            android:shadowDy="8"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>

        <TextView android:id="@+id/text_leader_1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_leaderboard"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_1_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_1_name"
            android:gravity="end"/>

        <TextView android:id="@+id/text_leader_2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_1_name"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_2_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_2_name"
            android:gravity="end"/>

        <TextView android:id="@+id/text_leader_3_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_2_name"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_3_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_3_name"
            android:gravity="end"/>

        <TextView android:id="@+id/text_leader_4_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_3_name"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_4_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_4_name"
            android:gravity="end"/>

        <TextView android:id="@+id/text_leader_5_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_4_name"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_5_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_5_name"
            android:gravity="end"/>

        <TextView android:id="@+id/text_leader_6_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_5_name"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_6_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_6_name"
            android:gravity="end"/>

        <TextView android:id="@+id/text_leader_7_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_6_name"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_7_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_7_name"
            android:gravity="end"/>

        <TextView android:id="@+id/text_leader_8_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_7_name"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_8_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_8_name"
            android:gravity="end"/>

        <TextView android:id="@+id/text_leader_9_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_8_name"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_9_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_9_name"
            android:gravity="end"/>

        <TextView android:id="@+id/text_leader_10_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_leader_9_name"
            android:gravity="start"/>

        <TextView android:id="@+id/text_leader_10_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_empty"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:fontFamily="@font/super_boys"
            android:shadowRadius="6"
            android:shadowColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/text_leader_10_name"
            android:gravity="end"/>

        <Button android:id="@+id/btn_leader_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/clear"
            android:backgroundTint="@color/orange"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/super_boys"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>